// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field for array setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Array test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="array:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Array test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="array:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="array test setting"
      data-test-subj="advancedSetting-editField-array:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value="default_value"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for array setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Array test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    default_value
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="array:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Array test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="array:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="array test setting"
      data-test-subj="advancedSetting-editField-array:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value="user, value"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for array setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Array test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="array:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Array test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="array:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="array test setting"
      data-test-subj="advancedSetting-editField-array:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="default_value"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for array setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Array test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="array:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Array test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="array:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="array test setting"
      data-test-subj="advancedSetting-editField-array:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="default_value"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for array setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Array test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="array:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Array test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="array:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-describedby="array:test:setting"
      aria-label="array test setting"
      data-test-subj="advancedSetting-editField-array:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value={
        Array [
          "example_value",
        ]
      }
    />
    <EuiScreenReaderOnly>
      <p
        id="array:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for array setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Array test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    default_value
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="array:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Array test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset array test setting to default"
            data-test-subj="advancedSetting-resetField-array:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="array:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="array test setting"
      data-test-subj="advancedSetting-editField-array:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="user, value"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for boolean setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Boolean test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="boolean:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Boolean test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={false}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="boolean:test:setting"
    labelType="label"
  >
    <EuiSwitch
      aria-label="boolean test setting"
      checked={true}
      data-test-subj="advancedSetting-editField-boolean:test:setting"
      disabled={true}
      label={
        <FormattedMessage
          defaultMessage="On"
          id="advancedSettings.field.onLabel"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for boolean setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Boolean test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    true
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="boolean:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Boolean test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={false}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="boolean:test:setting"
    labelType="label"
  >
    <EuiSwitch
      aria-label="boolean test setting"
      checked={false}
      data-test-subj="advancedSetting-editField-boolean:test:setting"
      disabled={true}
      label={
        <FormattedMessage
          defaultMessage="Off"
          id="advancedSettings.field.offLabel"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for boolean setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Boolean test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="boolean:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Boolean test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={false}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="boolean:test:setting"
    labelType="label"
  >
    <EuiSwitch
      aria-label="boolean test setting"
      checked={true}
      data-test-subj="advancedSetting-editField-boolean:test:setting"
      disabled={false}
      label={
        <FormattedMessage
          defaultMessage="On"
          id="advancedSettings.field.onLabel"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for boolean setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Boolean test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="boolean:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Boolean test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={false}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="boolean:test:setting"
    labelType="label"
  >
    <EuiSwitch
      aria-label="boolean test setting"
      checked={true}
      data-test-subj="advancedSetting-editField-boolean:test:setting"
      disabled={false}
      label={
        <FormattedMessage
          defaultMessage="On"
          id="advancedSettings.field.onLabel"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for boolean setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Boolean test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="boolean:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Boolean test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={false}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="boolean:test:setting"
    labelType="label"
  >
    <EuiSwitch
      aria-describedby="boolean:test:setting"
      aria-label="boolean test setting"
      checked={false}
      data-test-subj="advancedSetting-editField-boolean:test:setting"
      disabled={false}
      label={
        <FormattedMessage
          defaultMessage="Off"
          id="advancedSettings.field.offLabel"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
    <EuiScreenReaderOnly>
      <p
        id="boolean:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for boolean setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Boolean test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    true
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="boolean:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Boolean test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={false}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset boolean test setting to default"
            data-test-subj="advancedSetting-resetField-boolean:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="boolean:test:setting"
    labelType="label"
  >
    <EuiSwitch
      aria-label="boolean test setting"
      checked={false}
      data-test-subj="advancedSetting-editField-boolean:test:setting"
      disabled={false}
      label={
        <FormattedMessage
          defaultMessage="Off"
          id="advancedSettings.field.offLabel"
          values={Object {}}
        />
      }
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for image setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Image test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="image:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Image test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="image:test:setting"
    labelType="label"
  >
    <EuiFilePicker
      accept=".jpg,.jpeg,.png"
      compressed={false}
      data-test-subj="advancedSetting-editField-image:test:setting"
      disabled={true}
      display="large"
      fullWidth={true}
      initialPromptText="Select or drag and drop a file"
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for image setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Image test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    null
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="image:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Image test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="image:test:setting"
    labelType="label"
  >
    <EuiImage
      allowFullScreen={true}
      alt="image:test:setting"
      aria-label="image test setting"
      url="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for image setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Image test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="image:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Image test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="image:test:setting"
    labelType="label"
  >
    <EuiFilePicker
      accept=".jpg,.jpeg,.png"
      compressed={false}
      data-test-subj="advancedSetting-editField-image:test:setting"
      disabled={false}
      display="large"
      fullWidth={true}
      initialPromptText="Select or drag and drop a file"
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for image setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Image test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="image:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Image test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="image:test:setting"
    labelType="label"
  >
    <EuiFilePicker
      accept=".jpg,.jpeg,.png"
      compressed={false}
      data-test-subj="advancedSetting-editField-image:test:setting"
      disabled={false}
      display="large"
      fullWidth={true}
      initialPromptText="Select or drag and drop a file"
      onChange={[Function]}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for image setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Image test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="image:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Image test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="image:test:setting"
    labelType="label"
  >
    <EuiFilePicker
      accept=".jpg,.jpeg,.png"
      compressed={false}
      data-test-subj="advancedSetting-editField-image:test:setting"
      disabled={false}
      display="large"
      fullWidth={true}
      initialPromptText="Select or drag and drop a file"
      onChange={[Function]}
    />
    <EuiScreenReaderOnly>
      <p
        id="image:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for image setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Image test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    null
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="image:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Image test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset image test setting to default"
            data-test-subj="advancedSetting-resetField-image:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
        <span>
          <EuiLink
            aria-label="Change image test setting"
            data-test-subj="advancedSetting-changeImage-image:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Change image"
              id="advancedSettings.field.changeImageLinkText"
              values={Object {}}
            />
          </EuiLink>
        </span>
      </span>
    }
    label="image:test:setting"
    labelType="label"
  >
    <EuiImage
      allowFullScreen={true}
      alt="image:test:setting"
      aria-label="image test setting"
      url="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for json setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Json test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueTypeJsonText"
              values={
                Object {
                  "value": <EuiCodeBlock
                    language="json"
                    paddingSize="s"
                  >
                    {}
                  </EuiCodeBlock>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="json:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Json test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="json:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-json:test:setting"
    >
      <EuiCodeEditor
        aria-label="json test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={true}
        maxLines={30}
        minLines={6}
        mode="json"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="{\\"foo\\": \\"bar\\"}"
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for json setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Json test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueTypeJsonText"
              values={
                Object {
                  "value": <EuiCodeBlock
                    language="json"
                    paddingSize="s"
                  >
                    {}
                  </EuiCodeBlock>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="json:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Json test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="json:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-json:test:setting"
    >
      <EuiCodeEditor
        aria-label="json test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={true}
        maxLines={30}
        minLines={6}
        mode="json"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="{\\"hello\\": \\"world\\"}"
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for json setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Json test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="json:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Json test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="json:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-json:test:setting"
    >
      <EuiCodeEditor
        aria-label="json test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="json"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="{\\"foo\\": \\"bar\\"}"
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for json setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Json test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueTypeJsonText"
              values={
                Object {
                  "value": <EuiCodeBlock
                    language="json"
                    paddingSize="s"
                  >
                    {}
                  </EuiCodeBlock>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="json:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Json test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset json test setting to default"
            data-test-subj="advancedSetting-resetField-json:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="json:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-json:test:setting"
    >
      <EuiCodeEditor
        aria-label="json test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="json"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="{\\"foo\\": \\"bar\\"}"
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for json setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Json test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="json:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Json test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="json:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-json:test:setting"
    >
      <EuiCodeEditor
        aria-describedby="json:test:setting"
        aria-label="json test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="json"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value={
          Object {
            "foo": "bar2",
          }
        }
        width="100%"
      />
    </div>
    <EuiScreenReaderOnly>
      <p
        id="json:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for json setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Json test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueTypeJsonText"
              values={
                Object {
                  "value": <EuiCodeBlock
                    language="json"
                    paddingSize="s"
                  >
                    {}
                  </EuiCodeBlock>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="json:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Json test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset json test setting to default"
            data-test-subj="advancedSetting-resetField-json:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="json:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-json:test:setting"
    >
      <EuiCodeEditor
        aria-label="json test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="json"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="{\\"hello\\": \\"world\\"}"
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for markdown setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Markdown test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="markdown:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Markdown test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="markdown:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-markdown:test:setting"
    >
      <EuiCodeEditor
        aria-label="markdown test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={true}
        maxLines={30}
        minLines={6}
        mode="markdown"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value=""
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for markdown setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Markdown test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    null
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="markdown:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Markdown test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="markdown:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-markdown:test:setting"
    >
      <EuiCodeEditor
        aria-label="markdown test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={true}
        maxLines={30}
        minLines={6}
        mode="markdown"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="**bold**"
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for markdown setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Markdown test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="markdown:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Markdown test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="markdown:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-markdown:test:setting"
    >
      <EuiCodeEditor
        aria-label="markdown test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="markdown"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value=""
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for markdown setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Markdown test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="markdown:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Markdown test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="markdown:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-markdown:test:setting"
    >
      <EuiCodeEditor
        aria-label="markdown test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="markdown"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value=""
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for markdown setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Markdown test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="markdown:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Markdown test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="markdown:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-markdown:test:setting"
    >
      <EuiCodeEditor
        aria-describedby="markdown:test:setting"
        aria-label="markdown test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="markdown"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="Hello World"
        width="100%"
      />
    </div>
    <EuiScreenReaderOnly>
      <p
        id="markdown:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for markdown setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Markdown test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    null
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="markdown:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Markdown test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset markdown test setting to default"
            data-test-subj="advancedSetting-resetField-markdown:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="markdown:test:setting"
    labelType="label"
  >
    <div
      data-test-subj="advancedSetting-editField-markdown:test:setting"
    >
      <EuiCodeEditor
        aria-label="markdown test setting"
        editorProps={
          Object {
            "$blockScrolling": Infinity,
          }
        }
        height="auto"
        isReadOnly={false}
        maxLines={30}
        minLines={6}
        mode="markdown"
        onChange={[Function]}
        setOptions={
          Object {
            "showLineNumbers": false,
            "tabSize": 2,
          }
        }
        showGutter={false}
        theme="textmate"
        value="**bold**"
        width="100%"
      />
    </div>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for number setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Number test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="number:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Number test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="number:test:setting"
    labelType="label"
  >
    <EuiFieldNumber
      aria-label="number test setting"
      data-test-subj="advancedSetting-editField-number:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value={5}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for number setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Number test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    5
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="number:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Number test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="number:test:setting"
    labelType="label"
  >
    <EuiFieldNumber
      aria-label="number test setting"
      data-test-subj="advancedSetting-editField-number:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value={10}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for number setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Number test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="number:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Number test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="number:test:setting"
    labelType="label"
  >
    <EuiFieldNumber
      aria-label="number test setting"
      data-test-subj="advancedSetting-editField-number:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value={5}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for number setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Number test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="number:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Number test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="number:test:setting"
    labelType="label"
  >
    <EuiFieldNumber
      aria-label="number test setting"
      data-test-subj="advancedSetting-editField-number:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value={5}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for number setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Number test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="number:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Number test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="number:test:setting"
    labelType="label"
  >
    <EuiFieldNumber
      aria-describedby="number:test:setting"
      aria-label="number test setting"
      data-test-subj="advancedSetting-editField-number:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value={1}
    />
    <EuiScreenReaderOnly>
      <p
        id="number:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for number setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Number test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    5
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="number:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Number test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset number test setting to default"
            data-test-subj="advancedSetting-resetField-number:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="number:test:setting"
    labelType="label"
  >
    <EuiFieldNumber
      aria-label="number test setting"
      data-test-subj="advancedSetting-editField-number:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value={10}
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for select setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Select test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="select:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Select test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="select:test:setting"
    labelType="label"
  >
    <EuiSelect
      aria-label="select test setting"
      data-test-subj="advancedSetting-editField-select:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Apple",
            "value": "apple",
          },
          Object {
            "text": "Orange",
            "value": "orange",
          },
          Object {
            "text": "banana",
            "value": "banana",
          },
        ]
      }
      value="orange"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for select setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Select test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    Orange
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="select:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Select test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="select:test:setting"
    labelType="label"
  >
    <EuiSelect
      aria-label="select test setting"
      data-test-subj="advancedSetting-editField-select:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Apple",
            "value": "apple",
          },
          Object {
            "text": "Orange",
            "value": "orange",
          },
          Object {
            "text": "banana",
            "value": "banana",
          },
        ]
      }
      value="banana"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for select setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Select test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="select:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Select test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="select:test:setting"
    labelType="label"
  >
    <EuiSelect
      aria-label="select test setting"
      data-test-subj="advancedSetting-editField-select:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Apple",
            "value": "apple",
          },
          Object {
            "text": "Orange",
            "value": "orange",
          },
          Object {
            "text": "banana",
            "value": "banana",
          },
        ]
      }
      value="orange"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for select setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Select test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="select:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Select test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="select:test:setting"
    labelType="label"
  >
    <EuiSelect
      aria-label="select test setting"
      data-test-subj="advancedSetting-editField-select:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Apple",
            "value": "apple",
          },
          Object {
            "text": "Orange",
            "value": "orange",
          },
          Object {
            "text": "banana",
            "value": "banana",
          },
        ]
      }
      value="orange"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for select setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Select test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="select:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Select test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="select:test:setting"
    labelType="label"
  >
    <EuiSelect
      aria-describedby="select:test:setting"
      aria-label="select test setting"
      data-test-subj="advancedSetting-editField-select:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Apple",
            "value": "apple",
          },
          Object {
            "text": "Orange",
            "value": "orange",
          },
          Object {
            "text": "banana",
            "value": "banana",
          },
        ]
      }
      value="banana"
    />
    <EuiScreenReaderOnly>
      <p
        id="select:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for select setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for Select test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    Orange
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="select:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        Select test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset select test setting to default"
            data-test-subj="advancedSetting-resetField-select:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="select:test:setting"
    labelType="label"
  >
    <EuiSelect
      aria-label="select test setting"
      data-test-subj="advancedSetting-editField-select:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "Apple",
            "value": "apple",
          },
          Object {
            "text": "Orange",
            "value": "orange",
          },
          Object {
            "text": "banana",
            "value": "banana",
          },
        ]
      }
      value="banana"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for string setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test setting"
      data-test-subj="advancedSetting-editField-string:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for string setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    null
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="string:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test setting"
      data-test-subj="advancedSetting-editField-string:test:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value="foo"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for string setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test setting"
      data-test-subj="advancedSetting-editField-string:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for string setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test setting"
      data-test-subj="advancedSetting-editField-string:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value=""
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for string setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-describedby="string:test:setting"
      aria-label="string test setting"
      data-test-subj="advancedSetting-editField-string:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="hello world"
    />
    <EuiScreenReaderOnly>
      <p
        id="string:test:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for string setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    null
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset string test setting to default"
            data-test-subj="advancedSetting-resetField-string:test:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="string:test:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test setting"
      data-test-subj="advancedSetting-editField-string:test:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="foo"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for stringWithValidation setting should render as read only if saving is disabled 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test validation setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test-validation:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test validation setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test-validation:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test validation setting"
      data-test-subj="advancedSetting-editField-string:test-validation:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value="foo-default"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for stringWithValidation setting should render as read only with help text if overridden 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test validation setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    foo-default
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test-validation:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test validation setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <EuiText
        size="xs"
      >
        <FormattedMessage
          defaultMessage="This setting is overridden by the Kibana server and can not be changed."
          id="advancedSettings.field.helpText"
          values={Object {}}
        />
      </EuiText>
    }
    label="string:test-validation:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test validation setting"
      data-test-subj="advancedSetting-editField-string:test-validation:setting"
      disabled={true}
      fullWidth={true}
      onChange={[Function]}
      value="fooUserValue"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for stringWithValidation setting should render custom setting icon if it is custom 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test validation setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test-validation:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test validation setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test-validation:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test validation setting"
      data-test-subj="advancedSetting-editField-string:test-validation:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="foo-default"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for stringWithValidation setting should render default value if there is no user value set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test validation setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test-validation:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test validation setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test-validation:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test validation setting"
      data-test-subj="advancedSetting-editField-string:test-validation:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="foo-default"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for stringWithValidation setting should render unsaved value if there are unsaved changes 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field mgtAdvancedSettings__field--unsaved"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test validation setting",
          }
        }
      />
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test-validation:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test validation setting
      </span>
      <EuiIconTip
        aria-label="Custom setting"
        color="primary"
        content={
          <FormattedMessage
            defaultMessage="Custom setting"
            id="advancedSettings.field.customSettingTooltip"
            values={Object {}}
          />
        }
        type="asterisk"
      />
      <EuiIconTip
        anchorClassName="mgtAdvancedSettings__fieldTitleUnsavedIcon"
        aria-label="Unsaved"
        color="warning"
        content="Unsaved"
        type="dot"
      />
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={null}
    label="string:test-validation:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-describedby="string:test-validation:setting"
      aria-label="string test validation setting"
      data-test-subj="advancedSetting-editField-string:test-validation:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="hello world"
    />
    <EuiScreenReaderOnly>
      <p
        id="string:test-validation:setting"
      >
        Setting is currently not saved.
      </p>
    </EuiScreenReaderOnly>
  </EuiFormRow>
</EuiDescribedFormGroup>
`;

exports[`Field for stringWithValidation setting should render user value if there is user value is set 1`] = `
<EuiDescribedFormGroup
  className="mgtAdvancedSettings__field"
  description={
    <React.Fragment>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for String test validation setting",
          }
        }
      />
      <React.Fragment>
        <EuiSpacer
          size="s"
        />
        <EuiText
          size="xs"
        >
          <React.Fragment>
            <FormattedMessage
              defaultMessage="Default: {value}"
              id="advancedSettings.field.defaultValueText"
              values={
                Object {
                  "value": <EuiCode>
                    foo-default
                  </EuiCode>,
                }
              }
            />
          </React.Fragment>
        </EuiText>
      </React.Fragment>
    </React.Fragment>
  }
  fullWidth={true}
  id="string:test-validation:setting"
  title={
    <h3>
      <span
        className="mgtAdvancedSettings__fieldTitle"
      >
        String test validation setting
      </span>
      
      
    </h3>
  }
>
  <EuiFormRow
    className="mgtAdvancedSettings__fieldRow"
    describedByIds={Array []}
    display="row"
    fullWidth={true}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <span>
        <span>
          <EuiLink
            aria-label="Reset string test validation setting to default"
            data-test-subj="advancedSetting-resetField-string:test-validation:setting"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Reset to default"
              id="advancedSettings.field.resetToDefaultLinkText"
              values={Object {}}
            />
          </EuiLink>
             
        </span>
      </span>
    }
    label="string:test-validation:setting"
    labelType="label"
  >
    <EuiFieldText
      aria-label="string test validation setting"
      data-test-subj="advancedSetting-editField-string:test-validation:setting"
      disabled={false}
      fullWidth={true}
      onChange={[Function]}
      value="fooUserValue"
    />
  </EuiFormRow>
</EuiDescribedFormGroup>
`;
